# pinn-project

./: data_preprocessing.py  data_simple_line_2D.pkl  deeponet.ipynb  intro.ipynb  intro_and_fno_data_simple_line.ipynb  leapfrog.py  models.py  pyproject.toml  requirements.txt  sympnet.ipynb
sequence/: sps_ft_q26.json
